--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap');
+@import "tailwindcss";
+@plugin "daisyui" {
+   themes: forest --default, luxury --prefersdark;
+ }
+ @theme {
+  --font-Rowdies:"Rowdies", sans-serif;
+ }
+
