--- a/src/app/admin-dashboard/pages/user-page/user-page.component.html
+++ b/src/app/admin-dashboard/pages/user-page/user-page.component.html
@@ -1,1 +1,5 @@
-<p>user-page works!</p>
+<div class="mb-5 ">
+<h1 class="text-2x1 text-secondary"> Lista de Usuarios</h1>
+</div>
+<div class="divider divider-secondary"></div>
+<user-table [users]="userResource.value().data.users"></user-table>
